kubernetes/components/gluetun/networkpolicy.yaml
---
# yaml-language-server: $schema=https://www.schemastore.org/any.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${APP}-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ${APP}
      gluetun.k8s-gitops.io/client-gateway: ${GLUETUN_GATEWAY_NAME}
  egress:
    - toCIDRSet:
        - cidr: 100.100.${GLUETUN_GATEWAY_ID}.1/32
